--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 body {
@@ -13,17 +14,29 @@ body {
   padding: 20px;
 }
 
-.a4-page {
+@page {
+  size: A4 landscape;
+  margin: 0;
+}
+
+.page {
   width: 297mm;
   height: 210mm;
+  padding: 13mm 18mm;
   background-color: white;
+  /* for nice effect of shadow behind the page */
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 @media print {
-  body {
-    padding: 0;
-    background-color: white;
-    display: block;
-    min-height: auto;
+  .page {
+    height: auto;
+    box-shadow: initial;
+    background-color: initial;
   }
+}
+
+.content {
+  background-color: #808080;
+  height: 100%;
 }
