Update styles for printed page and tests

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@ body {
 }
 
 @media print {
+  body {
+    background-color: initial;
+  }
+
   .page {
     width: initial;
     min-height: initial;
